# oxidufs

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: release.yml  rust.yml
docs/: CLI-UX-Reference.md  Roadmap.md
src/: app.rs  app_context.rs  app_state.rs  config.rs  keymap.rs  main.rs  screen.rs  theme.rs
src/components/: error.rs  head_line.rs  help.rs  main_tab.rs  mod.rs  pool_overview.rs  pool_picker.rs  shortcut.rs  status_bar.rs  traits.rs
src/data/: pool.rs
src/disks/: label_uuid.rs  mock.rs  mod.rs  statvfs.rs
src/model/: mod.rs  mount_options.rs  pool.rs
src/mounts/: mock.rs  mod.rs  procfs.rs
src/output/: errors.rs  json.rs  mod.rs  plain.rs
tests/: cli.rs
tests/fixtures/: mountinfo_dual_pools  mountinfo_empty_pool  mountinfo_single_pool
