[package]
name = "oxidufs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A TUI for inspecting mergerfs storage pools."
repository = "https://github.com/pstkweb/oxidufs"
readme = "README.md"
authors = ["Thomas Triboult"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.29.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
nix = { version = "0.31.2", features = ["fs"] }
procfs = "0.18.0"
ratatui = "0.30.0"
ratatui-themes = "0.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
toml = "1.1.2"
xattr = "1.6.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
